--- a/html/about.html
+++ b/html/about.html
@@ -11,17 +11,50 @@
 
 <body>
     <header class="grid-container">
-        <div>
+        <div class="section">
             <img class="img1" width="50" height="85" src="../imgs/Click- (1).jpg" alt="Click Logo">
             <nav class="nav">
                 <label>CLICK</label>
                 <a href="index.html">Home</a>
-                <a href="about.html">about</a>
+                <a href="about.html">About</a>
             </nav>
         </div>
     </header>
+    <div class="personal">
+        <h1>Anas Abu Hamideh</h1>
+        <img class="imgava" src="../imgs/avatar.png" alt="Avatar">
+        <textarea id="txt" rows="4" cols="50">
 
-    <footer>@2022 All Rigths Reserved</footer>
+        </textarea>
+    </div>
+    <h2>Contact Me</h2>
+    <div class="contact">
+        <table id="t2">
+            <tr>
+                <td>
+                    <h4>Name</h4>
+                </td>
+                <td><input type="text"></td>
+            </tr>
+            <tr>
+                <td>
+                    <h4>Email</h4>
+                </td>
+                <td><input type="text"></td>
+            </tr>
+            <tr>
+                <td>
+                    <h4>Message</h4>
+                </td>
+                <td><textarea name="message" rows="4" cols="50"></textarea></td>
+            </tr>
+               
+        </table>
+        <input id="btn" type="button" value="Submit">
+    </div>
+    <footer>
+        <p>@2022 All Rigths Reserved</p>
+    </footer>
 </body>
 
 </html>
